Combining both insert and swap into one function.

--- a/notebooks/elemetary_recipe.ipynb
+++ b/notebooks/elemetary_recipe.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2842c11a-764b-41c7-a9eb-e34a123a0539",
+   "metadata": {},
+   "source": [
+    "Code that implements the elementary recipe from \"Quantum Circuit Unoptimization\" ([arXiv:2311.03805](https://arxiv.org/pdf/2311.03805))."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "29a7a364-d139-41c4-a719-21287f87fa72",
    "metadata": {},
    "source": [
@@ -146,19 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9ee91d10-c344-40f5-a38f-d81e1b1b3089",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from qiskit import QuantumCircuit\n",
+    "from qiskit.quantum_info import random_unitary, Operator\n",
+    "import numpy as np\n",
+    "\n",
     "def gate_insert(qc: QuantumCircuit) -> QuantumCircuit:\n",
-    "    \"\"\"Insert a two-qubit gate A and its Hermitian conjugate A† between two gates B1 and B2 that share a common qubit.\n",
+    "    \"\"\"Insert a two-qubit gate A and a modified version of its Hermitian conjugate between two gates B1 and B2 that share a common qubit.\n",
     "\n",
     "    Args:\n",
     "        qc: The input quantum circuit.\n",
     "\n",
     "    Returns:\n",
-    "        The modified quantum circuit with A and A† inserted.\n",
+    "        The modified quantum circuit with A and modified A† inserted.\n",
     "    \"\"\"\n",
     "    # Collect all two-qubit gates with their indices and qubits\n",
     "    two_qubit_gates = []\n",
@@ -168,7 +180,7 @@
     "        cargs = instruction.clbits\n",
     "        if len(qargs) == 2:\n",
     "            qubit_indices = [qc.find_bit(qarg).index for qarg in qargs]\n",
-    "            two_qubit_gates.append({'index': idx, 'qubits': qubit_indices})\n",
+    "            two_qubit_gates.append({'index': idx, 'qubits': qubit_indices, 'gate': instr})\n",
     "\n",
     "    # Find a pair of gates that share a common qubit\n",
     "    found_pair = False\n",
@@ -182,6 +194,7 @@
     "                B2_idx = two_qubit_gates[j]['index']\n",
     "                B1_qubits = two_qubit_gates[i]['qubits']\n",
     "                B2_qubits = two_qubit_gates[j]['qubits']\n",
+    "                B1_gate = two_qubit_gates[i]['gate']\n",
     "                shared_qubit = list(common_qubits)[0]\n",
     "                found_pair = True\n",
     "                break\n",
@@ -190,6 +203,45 @@
     "\n",
     "    if not found_pair:\n",
     "        raise ValueError(\"No pair of two-qubit gates sharing a common qubit found.\")\n",
+    "\n",
+    "    # Choose a third qubit not involved in B1\n",
+    "    all_qubits = set(range(qc.num_qubits))\n",
+    "    other_qubits = list(all_qubits - set(B1_qubits))\n",
+    "    if not other_qubits:\n",
+    "        raise ValueError(\"Not enough qubits to perform the operation.\")\n",
+    "    third_qubit = other_qubits[0]\n",
+    "\n",
+    "    # Map indices back to qubits\n",
+    "    qubit_map = {qc.find_bit(q).index: q for q in qc.qubits}\n",
+    "\n",
+    "    # Get the qubit objects\n",
+    "    q1 = qubit_map[B1_qubits[0]]\n",
+    "    q2 = qubit_map[B1_qubits[1]]\n",
+    "    q3 = qubit_map[third_qubit]\n",
+    "\n",
+    "    # Generate a random two-qubit unitary A\n",
+    "    A = random_unitary(4)\n",
+    "    A_dag = A.adjoint()\n",
+    "\n",
+    "    # Get the unitary matrix of B1\n",
+    "    B1_operator = Operator(B1_gate)\n",
+    "    U_B1 = B1_operator.data\n",
+    "\n",
+    "    # Compute the three-qubit unitary \\widetilde{A^\\dagger}\n",
+    "    I = np.eye(2)  # Identity for a single qubit\n",
+    "\n",
+    "    # Compute B1 ⊗ I\n",
+    "    B1_tensor_I = np.kron(U_B1, I)\n",
+    "\n",
+    "    # Compute (B1 ⊗ I)^\\dagger\n",
+    "    B1_tensor_I_dag = B1_tensor_I.conj().T\n",
+    "\n",
+    "    # Compute I ⊗ A^\\dagger\n",
+    "    I_tensor_A_dag = np.kron(I, A_dag.data)\n",
+    "\n",
+    "    # Compute \\widetilde{A^\\dagger}\n",
+    "    A_dag_tilde_data = B1_tensor_I_dag @ I_tensor_A_dag @ B1_tensor_I\n",
+    "    A_dag_tilde = Operator(A_dag_tilde_data)\n",
     "\n",
     "    # Create a new circuit\n",
     "    new_qc = QuantumCircuit(qc.num_qubits)\n",
@@ -201,22 +253,13 @@
     "        cargs = instruction.clbits\n",
     "        new_qc.append(instr, qargs, cargs)\n",
     "\n",
-    "    # Generate a random two-qubit unitary A\n",
-    "    A = random_unitary(4)\n",
-    "    A_dag = A.adjoint()\n",
+    "    # Insert A on qubits [shared_qubit, third_qubit]\n",
+    "    qubits_for_A = [qubit_map[shared_qubit], qubit_map[third_qubit]]\n",
+    "    new_qc.unitary(A, qubits_for_A, label=\"A\")\n",
     "\n",
-    "    # Decide on which qubits to apply A and A†\n",
-    "    # Choose the shared qubit and one of the other qubits\n",
-    "    other_qubits = list((set(B1_qubits + B2_qubits) - {shared_qubit}))\n",
-    "    target_qubit = other_qubits[0]  # Choose one of the other qubits\n",
-    "\n",
-    "    # Map indices back to qubits\n",
-    "    qubit_map = {qc.find_bit(q).index: q for q in qc.qubits}\n",
-    "    qubits_for_A = [qubit_map[shared_qubit], qubit_map[target_qubit]]\n",
-    "\n",
-    "    # Insert A and A†\n",
-    "    new_qc.unitary(A, qubits_for_A, label='A')\n",
-    "    new_qc.unitary(A_dag, qubits_for_A, label='A†')\n",
+    "    # Insert \\widetilde{A^\\dagger} on qubits [B1_qubits[0], B1_qubits[1], third_qubit]\n",
+    "    qubits_for_A_dag_tilde = [q1, q2, q3]\n",
+    "    new_qc.unitary(A_dag_tilde, qubits_for_A_dag_tilde, label=\"A_dag_tilde\")\n",
     "\n",
     "    # Copy the remaining gates\n",
     "    for instruction in qc.data[B1_idx+1:]:\n",
@@ -230,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f787b6ef-3fc8-460b-8b82-1c13869566cd",
    "metadata": {},
    "outputs": [
@@ -238,15 +281,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                       \n",
-      "q_0: ────────────■────────────────X────\n",
-      "     ┌────────┐  │  ┌────┐┌─────┐ │    \n",
-      "q_1: ┤0       ├──┼──┤1   ├┤1    ├─X────\n",
-      "     │        │┌─┴─┐│    ││     │      \n",
-      "q_2: ┤  Iswap ├┤ X ├┤  A ├┤  A† ├─■──■─\n",
-      "     │        │└───┘│    ││     │ │  │ \n",
-      "q_3: ┤1       ├─────┤0   ├┤0    ├─■──■─\n",
-      "     └────────┘     └────┘└─────┘      \n"
+      "     ┌───┐      ┌──────────────┐          ┌────────┐   ┌───┐\n",
+      "q_0: ┤ X ├──────┤1             ├──────────┤0       ├───┤ X ├\n",
+      "     └─┬─┘┌────┐│              │          │        │   └─┬─┘\n",
+      "q_1: ──┼──┤1   ├┤2             ├──────────┤        ├─X───┼──\n",
+      "       │  │    ││  A_dag_tilde │┌────────┐│  Iswap │ │   │  \n",
+      "q_2: ──┼──┤  A ├┤              ├┤0       ├┤        ├─X───┼──\n",
+      "       │  │    ││              ││  Iswap ││        │     │  \n",
+      "q_3: ──■──┤0   ├┤0             ├┤1       ├┤1       ├─────■──\n",
+      "          └────┘└──────────────┘└────────┘└────────┘        \n"
      ]
     }
    ],
