Adding noise-scaling for circuit unoptimization. Next is extrapolation.

--- a/notebooks/zne_via_unopt.ipynb
+++ b/notebooks/zne_via_unopt.ipynb
@@ -857,6 +857,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ae0e759-46a5-4247-98c7-1bad509d0332",
+   "metadata": {},
+   "source": [
+    "### Executor function for Mitiq"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "1bda0896-bfd6-4267-801a-14c61851969d",
@@ -899,29 +907,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6de2c389-a59c-4f78-a0dd-9510ac200840",
+   "metadata": {},
+   "source": [
+    "### Noise-scaling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80e32e3c-bde0-47fb-ae43-a88d60377c47",
+   "metadata": {},
+   "source": [
+    "We want to progressively increase the depth (and thus noise) of a circuit through progressive applications of the elementary recipe. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "22933d9a-ec97-478f-900b-d5986051f485",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 30,
+   "id": "a05bbf1c-57f8-4ca0-90b6-0eb691e04d0b",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌───┐             ┌────────┐   \n",
-      "q_0: ┤ X ├─■───────────┤1       ├─■─\n",
-      "     └─┬─┘ │ ┌────────┐│        │ │ \n",
-      "q_1: ──■───┼─┤1       ├┤  Iswap ├─┼─\n",
-      "           │ │        ││        │ │ \n",
-      "q_2: ──────■─┤  Iswap ├┤0       ├─■─\n",
-      "             │        │└────────┘   \n",
-      "q_3: ────────┤0       ├─────────────\n",
-      "             └────────┘             \n",
-      "Expectation value of original circuit: 0.93\n",
-      "Expectation value of unoptimized circuit: 0.5016\n",
-      "Zero-noise extrapolated expectation value: 0.9180000000000005\n"
+      "Noise-scaled expectation values: [0.791, 0.6699999999999999, 0.5922, 0.49800000000000005, 0.42000000000000004, 0.3758, 0.3096, 0.2488]\n"
      ]
     }
    ],
@@ -929,29 +940,32 @@
     "backend = AerSimulator()\n",
     "noise_model = depolarizing_noise_model(error=0.01)\n",
     "shots = 10_000\n",
-    "zne_executor = functools.partial(execute, backend=backend, noise_model=noise_model, shots=shots)\n",
     "\n",
-    "# Generate a random two-qubit circuit\n",
-    "qc = random_two_qubit_circuit(4, 5)\n",
-    "unoptimized_qc = elementary_recipe(qc, iterations=8)\n",
-    "print(qc)\n",
+    "num_qubits = 4\n",
+    "depth = 5\n",
+    "recipe_iters = 8\n",
     "\n",
-    "# Test the execute function\n",
-    "expectation_qc = execute(circuit=qc, backend=backend, shots=shots, noise_model=noise_model)\n",
-    "expectation_unoptimized_qc = execute(circuit=unoptimized_qc, backend=backend, shots=shots, noise_model=noise_model)\n",
+    "qc = random_two_qubit_circuit(num_qubits=num_qubits, depth=depth)\n",
+    "noise_scaled_circuits = [elementary_recipe(qc, iterations=i) for i in range(1, recipe_iters+1)]\n",
     "\n",
-    "print(f\"Expectation value of original circuit: {expectation_qc}\")\n",
-    "print(f\"Expectation value of unoptimized circuit: {expectation_unoptimized_qc}\")\n",
+    "# We run all the noise scaled circuits on the noisy backend\n",
+    "noise_scaled_vals = [execute(circuit=c, backend=backend, shots=shots, noise_model=noise_model) for c in noise_scaled_circuits]\n",
     "\n",
-    "mitigated_result = mitiq.zne.execute_with_zne(unoptimized_qc, zne_executor)\n",
-    "\n",
-    "print(f\"Zero-noise extrapolated expectation value: {mitigated_result}\")"
+    "print(\"Noise-scaled expectation values:\", noise_scaled_vals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43daf8a4-5325-4607-98ed-4414ed3f213b",
+   "metadata": {},
+   "source": [
+    "### Extrapolation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a05bbf1c-57f8-4ca0-90b6-0eb691e04d0b",
+   "id": "9a3fb4de-264a-4295-ba70-6ed6a0238fbd",
    "metadata": {},
    "outputs": [],
    "source": []
