refactor: refactoring plotting for QV.

--- a/notebooks/zne_benchmarks.ipynb
+++ b/notebooks/zne_benchmarks.ipynb
@@ -95,8 +95,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "c901199e-9e70-485b-85ac-ab0fdde9da13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unopt.benchmark import bench\n",
+    "from unopt.circuit import generate_random_two_qubit_gate_circuit\n",
+    "from unopt.plots import plot_avg_circuit_depths\n",
+    "from unopt.noise import depolarizing_noise_model\n",
+    "from unopt.recipe import insert, swap, decompose, synthesize\n",
+    "from qiskit import QuantumCircuit\n",
+    "\n",
+    "\n",
+    "from mitiq import zne"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "cd4311c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_qubits = 4\n",
+    "# Initialize the circuit with the specified number of qubits\n",
+    "qc = QuantumCircuit(num_qubits)\n",
+    "\n",
+    "# Apply Hadamard gates to all qubits\n",
+    "for qubit in range(num_qubits):\n",
+    "    qc.h(qubit)\n",
+    "\n",
+    "# Apply controlled-Z (CZ) gates for every pair of qubits\n",
+    "for i in range(num_qubits):\n",
+    "    for j in range(i + 1, num_qubits):\n",
+    "        qc.cz(i, j)\n",
+    "# qc = generate_random_two_qubit_gate_circuit(num_qubits=3, depth=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "dda30ee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qc.draw(output=\"mpl\").savefig(\"circuit.svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c0d5ad7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Gate Insertion:\n",
+    "circuit, B1_info = insert(qc)\n",
+    "circuit.draw(output=\"mpl\").savefig(\"circuit_insert.svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f5463ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Gate Swapping:\n",
+    "circuit = swap(circuit, B1_info)\n",
+    "circuit.draw(output=\"mpl\").savefig(\"circuit_swap.svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "79d47a64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Decomposition:\n",
+    "circuit = decompose(circuit)\n",
+    "circuit.draw(output=\"mpl\").savefig(\"circuit_decompose.svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "8488b505",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 4: Synthesis:\n",
+    "circuit = synthesize(circuit)\n",
+    "circuit.draw(output=\"mpl\").savefig(\"circuit_synthesize.svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "522ab602",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -104,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
