refactor: incorporating elijah's qaoa code into the codebase.

--- a/notebooks/zne_benchmarks.ipynb
+++ b/notebooks/zne_benchmarks.ipynb
@@ -135,59 +135,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "id": "dda30ee7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌───┐                  \n",
+      "q_0: ┤ H ├─■──■──■──────────\n",
+      "     ├───┤ │  │  │          \n",
+      "q_1: ┤ H ├─■──┼──┼──■──■────\n",
+      "     ├───┤    │  │  │  │    \n",
+      "q_2: ┤ H ├────■──┼──■──┼──■─\n",
+      "     ├───┤       │     │  │ \n",
+      "q_3: ┤ H ├───────■─────■──■─\n",
+      "     └───┘                  \n"
+     ]
+    }
+   ],
    "source": [
+    "print(qc)\n",
     "qc.draw(output=\"mpl\").savefig(\"circuit.svg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "id": "c0d5ad7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌───┐   ┌────────────────┐┌────┐               \n",
+      "q_0: ┤ H ├─■─┤0               ├┤0   ├─■──■──────────\n",
+      "     ├───┤ │ │                ││    │ │  │          \n",
+      "q_1: ┤ H ├─■─┤  $A^{\\dagger}$ ├┤  A ├─┼──┼──■──■────\n",
+      "     ├───┤   │                ││    │ │  │  │  │    \n",
+      "q_2: ┤ H ├───┤1               ├┤1   ├─■──┼──■──┼──■─\n",
+      "     ├───┤   └────────────────┘└────┘    │     │  │ \n",
+      "q_3: ┤ H ├───────────────────────────────■─────■──■─\n",
+      "     └───┘                                          \n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Gate Insertion:\n",
     "circuit, B1_info = insert(qc)\n",
+    "print(circuit)\n",
     "circuit.draw(output=\"mpl\").savefig(\"circuit_insert.svg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "f5463ff1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌───┐┌────────────────────────────┐   ┌────┐               \n",
+      "q_0: ┤ H ├┤0                           ├─■─┤0   ├─■──■──────────\n",
+      "     ├───┤│                            │ │ │    │ │  │          \n",
+      "q_1: ┤ H ├┤1 $\\widetilde{A^{\\dagger}}$ ├─■─┤  A ├─┼──┼──■──■────\n",
+      "     ├───┤│                            │   │    │ │  │  │  │    \n",
+      "q_2: ┤ H ├┤2                           ├───┤1   ├─■──┼──■──┼──■─\n",
+      "     ├───┤└────────────────────────────┘   └────┘    │     │  │ \n",
+      "q_3: ┤ H ├───────────────────────────────────────────■─────■──■─\n",
+      "     └───┘                                                      \n"
+     ]
+    }
+   ],
    "source": [
     "# Step 2: Gate Swapping:\n",
     "circuit = swap(circuit, B1_info)\n",
+    "print(circuit)\n",
     "circuit.draw(output=\"mpl\").savefig(\"circuit_swap.svg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "id": "79d47a64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "global phase: 6.2772\n",
+      "     ┌─────────┐┌──────────────┐                                      »\n",
+      "q_0: ┤ U2(0,π) ├┤0             ├──■───────────────────────────■───────»\n",
+      "     ├─────────┤│  circuit-826 │  │                           │       »\n",
+      "q_1: ┤ U2(0,π) ├┤1             ├──┼──────────────────────■────┼────■──»\n",
+      "     ├─────────┤├──────────────┤┌─┴─┐┌────────────────┐┌─┴─┐┌─┴─┐┌─┴─┐»\n",
+      "q_2: ┤ U2(0,π) ├┤ U(0,0,2.332) ├┤ X ├┤ U(0,0,0.73678) ├┤ X ├┤ X ├┤ X ├»\n",
+      "     ├─────────┤└────┬───┬─────┘└───┘└────────────────┘└───┘└───┘└───┘»\n",
+      "q_3: ┤ U2(0,π) ├─────┤ H ├────────────────────────────────────────────»\n",
+      "     └─────────┘     └───┘                                            »\n",
+      "«      ┌──────────────┐                                                    »\n",
+      "«q_0: ─┤0             ├────────────────■───────────────────────────────────»\n",
+      "«      │  circuit-829 │                │                                   »\n",
+      "«q_1: ─┤1             ├────────────────┼────────────────────────────────■──»\n",
+      "«     ┌┴──────────────┤┌────────────┐┌─┴─┐┌────────────┐┌────────────┐┌─┴─┐»\n",
+      "«q_2: ┤ U(1.2028,0,0) ├┤ U(π/2,0,π) ├┤ X ├┤ U(π/2,0,π) ├┤ U(π/2,0,π) ├┤ X ├»\n",
+      "«     └───────────────┘└────────────┘└───┘└────────────┘└────────────┘└───┘»\n",
+      "«q_3: ─────────────────────────────────────────────────────────────────────»\n",
+      "«                                                                          »\n",
+      "«                                      ┌──────────────┐                   »\n",
+      "«q_0: ──────────────────────────────■──┤0             ├───────────────────»\n",
+      "«                                   │  │  circuit-832 │                   »\n",
+      "«q_1: ──────────────────────────────┼──┤1             ├───────────────────»\n",
+      "«     ┌────────────┐┌────────────┐┌─┴─┐└┬────────────┬┘┌─────────────────┐»\n",
+      "«q_2: ┤ U(π/2,0,π) ├┤ U(π/2,0,π) ├┤ X ├─┤ U(π/2,0,π) ├─┤ U(-0.73317,0,0) ├»\n",
+      "«     └────────────┘└────────────┘└───┘ └────────────┘ └─────────────────┘»\n",
+      "«q_3: ────────────────────────────────────────────────────────────────────»\n",
+      "«                                                                         »\n",
+      "«                                                              »\n",
+      "«q_0: ─────────────────────■───────────────────────────■───────»\n",
+      "«                          │                           │       »\n",
+      "«q_1: ─────────────────────┼──────────────────────■────┼────■──»\n",
+      "«     ┌─────────────────┐┌─┴─┐┌────────────────┐┌─┴─┐┌─┴─┐┌─┴─┐»\n",
+      "«q_2: ┤ U(0,0,-0.94179) ├┤ X ├┤ U(0,0,-1.1122) ├┤ X ├┤ X ├┤ X ├»\n",
+      "«     └─────────────────┘└───┘└────────────────┘└───┘└───┘└───┘»\n",
+      "«q_3: ─────────────────────────────────────────────────────────»\n",
+      "«                                                              »\n",
+      "«             ┌──────────────┐                 ┌────────────────────────┐     »\n",
+      "«q_0: ────────┤0             ├──────────────■──┤ U(2.141,2.7446,-1.178) ├──■──»\n",
+      "«             │  circuit-835 │       ┌───┐┌─┴─┐└─────────┬───┬──────────┘  │  »\n",
+      "«q_1: ────────┤1             ├───────┤ H ├┤ X ├──────────┤ H ├─────────────┼──»\n",
+      "«     ┌───────┴──────────────┴──────┐└───┘└───┘          └───┘           ┌─┴─┐»\n",
+      "«q_2: ┤ U(0.23137,0.46306,-0.55892) ├────────────────────────────────────┤ X ├»\n",
+      "«     └─────────────────────────────┘                                    └───┘»\n",
+      "«q_3: ────────────────────────────────────────────────────────────────────────»\n",
+      "«                                                                             »\n",
+      "«       ┌──────────────────────┐           ┌───────────────────┐         »\n",
+      "«q_0: ──┤ U(0.74181,-π/2,-π/2) ├────■──────┤ U(0.50394,-π,π/2) ├──────■──»\n",
+      "«       └──────────────────────┘    │      └───────────────────┘      │  »\n",
+      "«q_1: ──────────────────────────────┼─────────────────────────────────┼──»\n",
+      "«     ┌──────────────────────────┐┌─┴─┐┌───────────────────────────┐┌─┴─┐»\n",
+      "«q_2: ┤ U(2.0017,2.7699,0.81989) ├┤ X ├┤ U(1.1033,0.32306,-2.2097) ├┤ X ├»\n",
+      "«     └──────────────────────────┘└───┘└───────────────────────────┘└───┘»\n",
+      "«q_3: ───────────────────────────────────────────────────────────────────»\n",
+      "«                                                                        »\n",
+      "«       ┌──────────────────────────┐                                         »\n",
+      "«q_0: ──┤ U(2.1261,1.6883,-1.1095) ├────────■─────────■──────────────────────»\n",
+      "«       └──────────────────────────┘        │         │                      »\n",
+      "«q_1: ──────────────────────────────────────┼─────────┼─────────■─────────■──»\n",
+      "«     ┌─────────────────────────────┐┌───┐┌─┴─┐┌───┐  │  ┌───┐┌─┴─┐┌───┐  │  »\n",
+      "«q_2: ┤ U(2.4364,-0.83044,0.021696) ├┤ H ├┤ X ├┤ H ├──┼──┤ H ├┤ X ├┤ H ├──┼──»\n",
+      "«     └─────────────────────────────┘└───┘└───┘└───┘┌─┴─┐├───┤├───┤└───┘┌─┴─┐»\n",
+      "«q_3: ──────────────────────────────────────────────┤ X ├┤ H ├┤ H ├─────┤ X ├»\n",
+      "«                                                   └───┘└───┘└───┘     └───┘»\n",
+      "«                         \n",
+      "«q_0: ────────────────────\n",
+      "«                         \n",
+      "«q_1: ────────────────────\n",
+      "«                         \n",
+      "«q_2: ────────────■───────\n",
+      "«     ┌───┐┌───┐┌─┴─┐┌───┐\n",
+      "«q_3: ┤ H ├┤ H ├┤ X ├┤ H ├\n",
+      "«     └───┘└───┘└───┘└───┘\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Decomposition:\n",
     "circuit = decompose(circuit)\n",
+    "print(circuit)\n",
     "circuit.draw(output=\"mpl\").savefig(\"circuit_decompose.svg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "id": "8488b505",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "global phase: 5.1859\n",
+      "     ┌───────────────────────┐           ┌────────────────┐          »\n",
+      "q_0: ┤ U3(1.7988,π/2,2.4672) ├──■────────┤ U3(π,-π/4,π/4) ├───────■──»\n",
+      "     └─┬───────────────────┬─┘┌─┴─┐┌─────┴────────────────┴────┐┌─┴─┐»\n",
+      "q_1: ──┤ U3(2.1322,π/2,-π) ├──┤ X ├┤ U3(1.7737,2.0408,-2.3748) ├┤ X ├»\n",
+      "       └┬──────────────────┤  └───┘└───────────────────────────┘└───┘»\n",
+      "q_2: ───┤ U3(π/2,2.332,-π) ├─────────────────────────────────────────»\n",
+      "        └┬────────────────┬┘                                         »\n",
+      "q_3: ────┤ U3(0,π/2,-π/2) ├──────────────────────────────────────────»\n",
+      "         └────────────────┘                                          »\n",
+      "«      ┌──────────────────────────┐                             »\n",
+      "«q_0: ─┤ U3(2.146,1.4556,-1.8463) ├──■───────────────────────■──»\n",
+      "«     ┌┴──────────────────────────┤  │                       │  »\n",
+      "«q_1: ┤ U3(2.5004,0.47347,-1.002) ├──┼───────────────────────┼──»\n",
+      "«     └───────────────────────────┘┌─┴─┐┌─────────────────┐┌─┴─┐»\n",
+      "«q_2: ─────────────────────────────┤ X ├┤ U3(0,0,0.73678) ├┤ X ├»\n",
+      "«                                  └───┘└─────────────────┘└───┘»\n",
+      "«q_3: ──────────────────────────────────────────────────────────»\n",
+      "«                                                               »\n",
+      "«     ┌───────────────────────┐          ┌──────────────────┐         »\n",
+      "«q_0: ┤ U3(π/2,2.778,-2.9469) ├──■───────┤ U3(2.4216,0,π/2) ├──────■──»\n",
+      "«     └───────────────────────┘┌─┴─┐┌────┴──────────────────┴───┐┌─┴─┐»\n",
+      "«q_1: ─────────────────────────┤ X ├┤ U3(2.0383,2.2097,-2.8185) ├┤ X ├»\n",
+      "«        ┌──────────────────┐  └───┘└───────────────────────────┘└───┘»\n",
+      "«q_2: ───┤ U3(0.36798,0,-π) ├─────────────────────────────────────────»\n",
+      "«        └──────────────────┘                                         »\n",
+      "«q_3: ────────────────────────────────────────────────────────────────»\n",
+      "«                                                                     »\n",
+      "«     ┌───────────────────────┐                             »\n",
+      "«q_0: ┤ U3(0,-2.4513,-1.8584) ├───■─────────────────────────»\n",
+      "«     ├───────────────────────┴┐  │                         »\n",
+      "«q_1: ┤ U3(0.56139,2.5787,π/2) ├──┼──────────────────────■──»\n",
+      "«     └────────────────────────┘┌─┴─┐┌────────────────┐┌─┴─┐»\n",
+      "«q_2: ──────────────────────────┤ X ├┤ U3(0,π/2,-π/2) ├┤ X ├»\n",
+      "«                               └───┘└────────────────┘└───┘»\n",
+      "«q_3: ──────────────────────────────────────────────────────»\n",
+      "«                                                           »\n",
+      "«                                     ┌───────────────────────┐      »\n",
+      "«q_0: ─────────────────────────────■──┤ U3(0,-2.0069,-1.8161) ├───■──»\n",
+      "«     ┌─────────────────────────┐  │  └───────────────────────┘ ┌─┴─┐»\n",
+      "«q_1: ┤ U3(1.0094,-π/2,-2.9465) ├──┼────────────────────────────┤ X ├»\n",
+      "«     └────┬────────────────┬───┘┌─┴─┐┌────────────────────────┐└───┘»\n",
+      "«q_2: ─────┤ U3(0,π/2,-π/2) ├────┤ X ├┤ U3(1.0094,-π/2,2.3805) ├─────»\n",
+      "«          └────────────────┘    └───┘└────────────────────────┘     »\n",
+      "«q_3: ───────────────────────────────────────────────────────────────»\n",
+      "«                                                                    »\n",
+      "«           ┌───────────────┐           ┌─────────────────────────────┐     »\n",
+      "«q_0: ──────┤ U3(π/2,0,π/2) ├────────■──┤ U3(1.3344,-0.29451,-3.0707) ├──■──»\n",
+      "«     ┌─────┴───────────────┴─────┐┌─┴─┐└────┬───────────────────┬────┘  │  »\n",
+      "«q_1: ┤ U3(2.0383,2.2097,-2.8185) ├┤ X ├─────┤ U3(π/2,-1.4508,0) ├───────┼──»\n",
+      "«     └───────────────────────────┘└───┘     └───────────────────┘     ┌─┴─┐»\n",
+      "«q_2: ─────────────────────────────────────────────────────────────────┤ X ├»\n",
+      "«                                                                      └───┘»\n",
+      "«q_3: ──────────────────────────────────────────────────────────────────────»\n",
+      "«                                                                           »\n",
+      "«          ┌─────────────────┐          ┌───────────────────────────┐          »\n",
+      "«q_0: ─────┤ U3(2.423,0,π/2) ├───────■──┤ U3(1.9562,1.1524,-1.5132) ├───────■──»\n",
+      "«          └─────────────────┘       │  └───────────────────────────┘       │  »\n",
+      "«q_1: ───────────────────────────────┼─────────────────────────────────■────┼──»\n",
+      "«     ┌───────────────────────────┐┌─┴─┐ ┌──────────────────────────┐┌─┴─┐  │  »\n",
+      "«q_2: ┤ U3(1.9087,2.1462,-2.6166) ├┤ X ├─┤ U3(1.795,1.3807,-1.3109) ├┤ X ├──┼──»\n",
+      "«     └───────────────────────────┘└───┘ └──────────────────────────┘└───┘┌─┴─┐»\n",
+      "«q_3: ────────────────────────────────────────────────────────────────────┤ X ├»\n",
+      "«                                                                         └───┘»\n",
+      "«                                             \n",
+      "«q_0: ────────────────────────────────────────\n",
+      "«                                             \n",
+      "«q_1: ─────────────────■──────────────────────\n",
+      "«     ┌─────────────┐  │                      \n",
+      "«q_2: ┤ U3(π/2,0,π) ├──┼────■─────────────────\n",
+      "«     └─────────────┘┌─┴─┐┌─┴─┐┌─────────────┐\n",
+      "«q_3: ───────────────┤ X ├┤ X ├┤ U3(π/2,0,π) ├\n",
+      "«                    └───┘└───┘└─────────────┘\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 4: Synthesis:\n",
     "circuit = synthesize(circuit)\n",
+    "print(circuit)\n",
     "circuit.draw(output=\"mpl\").savefig(\"circuit_synthesize.svg\")"
    ]
   },
